--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,3 +24,194 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 100px;
+  position: sticky;
+  top: 0;
+  border-bottom: 3px linear-gradient(180deg, #994f37, #9333ea);
+  height: 20vh;
+  z-index: 900;
+  /* background: linear-gradient(45deg, #f0b9c7, #2d9ed6,   #ebadbc); */
+  background-color: #5692d7;
+
+ }
+
+
+ .nav-menu {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.list-items {
+  text-decoration: none;
+  color: #3765ef;
+  font-weight: bold;
+  position: relative;
+
+}
+
+.list-items::after{
+  content: " ";
+  width: 0;
+  position: absolute;
+  height: 3px;
+  background: rgb(7, 1, 1);
+  left: 0;
+  transition: 1s;
+  bottom: -5px;
+
+}
+.list-items:hover{
+  background-color: #171717;
+}
+.logo {
+  font-size: 15px;
+  cursor: pointer;
+  display: block;
+  font-weight: bolder;
+
+}
+.logo:hover{
+color: rgb(241, 229, 235);
+}
+
+.logdiv{
+ background: linear-gradient(45deg, #f0b9c7, #2d9ed6,  #5692d7, #ebadbc);
+  background-size: 400% 400%;
+  animation: gradientAnimation 5s ease infinite;
+}
+@keyframes gradientAnimation {
+0%{
+background-position: 0% 50%;
+
+}
+50%{
+background-position: 100%, 50%;
+
+}
+100%{
+background-position: 0% 50%;
+
+}
+
+}
+
+.phone{
+  color: #ffffff;
+  display: inline;
+  height: fit-content;
+}
+
+.mobile-icon {
+  display: none;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: larger;
+  
+}
+.mobile-icon:hover{
+color: rgb(218, 113, 43);
+}
+
+ /* TABLET VERSION */
+@media screen and (max-width: 768px){ 
+      .Header {
+          padding: 0 30px;
+          height: 15vh;
+      }
+  
+      .logo{
+          padding: 0 10px;
+          font-size: 15px;
+      }
+      .container{
+        padding: 0 20px;
+      }
+      
+  .nav-menu {
+    /* border: 2px solid green; */
+    flex-direction: column;
+    position: absolute;
+    right: 1000px;
+    top: 100px;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    padding: 50px 20px;
+    /* background: linear-gradient(180deg, #120d0d, #863030); */
+    background: linear-gradient(45deg, #f0b9c7, #2d9ed6,  #5692d7, #ebadbc);
+    border-radius: 20px;
+    z-index: 1000;
+    transition: right 0.8s;
+}
+
+  .nav-menu.show {
+    right: 0;
+    
+     }
+      .mobile-icon{
+        display: block;
+        color: white;
+      }
+      .phone{
+          display: none;
+      }
+
+    }
+
+
+
+
+/* MOBILE VERSION */
+@media screen and (max-width: 600px) {
+  .header{
+      padding: 0 20px;
+      height: 15vh;
+  }
+
+  .logo{
+      padding: 0 10px;
+      font-size: 10px;
+  }
+
+  .mobile-icon {
+      display: block;
+      color: white;
+  }
+  .container{
+    padding: 0 20px;
+  }
+
+  .nav-menu {
+      /* border: 2px solid green; */
+      flex-direction: column;
+      position: absolute;
+      right: 1000px;
+      top: 94px;
+      width: 100vw;
+      height: 100vh;
+      align-items: center;
+      color: green;
+      padding: 50px 20px;
+      /* background: linear-gradient(180deg, #120d0d, #863030); */
+      background: linear-gradient(45deg, #f0b9c7, #2d9ed6,  #5692d7, #ebadbc);
+      border-radius: 20px;
+      z-index: 1000;
+      transition: right 0.8s;
+  }
+
+  .nav-menu.show {
+      right: 0;
+      
+  }
+
+  
+  .phone{
+      display: none;
+  }
+}
