--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -222,22 +222,22 @@ color: rgb(218, 113, 43);
     padding: 0 20px;
   }
   .ellipse{
-    width: 230px;
+    width: 330px;
     top: 125px;
     left: 10px;
   }
   .ellipse-2{
-    width: 200px;
+    width: 290px;
     top: 150px;
-    left: 5px;
+    left: 15px;
   }
   .scree{
     width: 100%;
     height:100%;
-    border: 4px solid red;
+    /* border: 4px solid red; */
   }
   .right-div{
-    border: 4px solid gray;
+    /* border: 4px solid gray; */
     /* display: flex; */
     /* justify-content: end; */
        /* display: block; */
@@ -245,12 +245,13 @@ color: rgb(218, 113, 43);
     
   }
   .form{
-    border: 5px solid green;
+    /* border: 5px solid green; */
+    margin-top: 400px;
     /* display: block; */
     /* display: flex; */
     /* justify-content: end; */
     /* align-items: end; */
-    /* right: 0; */
+    /* right: 10px; */
 
   }
   .welcome{
@@ -267,14 +268,14 @@ color: rgb(218, 113, 43);
    /* justify-content: flex-end; */
    width: 100%;
    right: 0%;
-   border: 4px solid red;
+   /* border: 4px solid rgb(32, 31, 31); */
    /* padding: 0; */
   }
   .password{
    justify-content: flex-end;
    /* display: flex; */
    width: 100%;
-   border: 4px solid red;
+   /* border: 4px solid rgb(36, 35, 35); */
    /* padding: 0; */
   }
 
@@ -305,10 +306,4 @@ color: rgb(218, 113, 43);
   .phone{
       display: none;
   }
-}
-
-
-
-@media screen and (max-width: 768px) {
-  
 }
